deployment/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer-manager
  labels:
    app: indexer-manager
spec:
  selector:
    matchLabels:
      app: indexer-manager
  replicas: 2
  template:
    metadata:
      labels:
        app: indexer-manager
    spec:
      containers:
        - name: indexer-manager
          imagePullPolicy: IfNotPresent
          image: anhhuy0501/indexer-manager
          ports:
            - containerPort: 3032
          securityContext:
            runAsUser: 1000
      securityContext:
        fsGroup: 1000
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer-api
  labels:
    app: indexer-api
spec:
  selector:
    matchLabels:
      app: indexer-api
  replicas: 1
  template:
    metadata:
      labels:
        app: indexer-api
    spec:
      containers:
        - name: indexer-api
          imagePullPolicy: IfNotPresent
          image: anhhuy0501/indexer-api
          ports:
            - containerPort: 3031
          securityContext:
            runAsUser: 1000
      securityContext:
        fsGroup: 1000
      imagePullSecrets:
        - name: regcred
        containers:
          - name: indexer-api
            imagePullPolicy: IfNotPresent
            image: anhhuy0501/indexer-api
            ports:
              - containerPort: 3031
            securityContext:
              runAsUser: 1000

          - name: massbit-graphql
            imagePullPolicy: IfNotPresent
            image: anhhuy0501/massbit-graphql
            ports:
              - containerPort: 3041
            securityContext:
              runAsUser: 1000

        securityContext:
          fsGroup: 1000
        imagePullSecrets:
          - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chain-reader
  labels:
    app: chain-reader
spec:
  selector:
    matchLabels:
      app: chain-reader
  replicas: 1
  template:
    metadata:
      labels:
        app: chain-reader
    spec:
      containers:
        - name: chain-reader
          imagePullPolicy: IfNotPresent
          image: anhhuy0501/chain-reader
          ports:
            - containerPort: 50051
          securityContext:
            runAsUser: 1000
      securityContext:
        fsGroup: 1000
      imagePullSecrets:
        - name: regcred
